--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.19.3",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.12",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^1.0.0-beta.1"
+    "json-server": "^1.0.0-beta.1",
+    "sass": "^1.77.8"
   }
 }
