--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.12",
+    "echarts": "^5.5.1",
     "lodash": "^4.17.21",
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0-beta.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "serve": "json-server db.json --port 3004"
   },
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "json-server": "^1.0.0-beta.1",
     "sass": "^1.77.8"
   }
